// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`-> 1 convo 1`] = `
Object {
  "chat": Object {
    "__v": 0,
    "_id": 0,
    "createdAt": "2017-02-01T09:00:00-08:00",
    "name": "chat",
  },
}
`;

exports[`-> 1 convo 2`] = `
Object {
  "chat": Object {
    "__v": 0,
    "_id": 0,
    "createdAt": "2017-02-01T09:00:00-08:00",
    "name": "chat",
  },
}
`;

exports[`-> 2 convos 1`] = `
Object {
  "0": Object {
    "__v": 0,
    "_id": 0,
    "createdAt": "2017-02-01T09:00:00-08:00",
    "name": "chat",
  },
  "chat2": Object {
    "__v": 0,
    "_id": 1,
    "createdAt": "2017-02-01T09:01:00-08:00",
    "name": "chat2",
  },
}
`;

exports[`-> 3 convos 1`] = `
Object {
  "0": Object {
    "__v": 0,
    "_id": 0,
    "createdAt": "2017-02-01T09:00:00-08:00",
    "name": "chat",
  },
  "1": Object {
    "__v": 0,
    "_id": 1,
    "createdAt": "2017-02-01T09:01:00-08:00",
    "name": "chat2",
  },
  "chat3": Object {
    "__v": 0,
    "_id": 2,
    "createdAt": "2017-02-01T09:02:00-08:00",
    "name": "chat3",
  },
}
`;

exports[`default 1`] = `Object {}`;

exports[`no payload 1`] = `Object {}`;

exports[`with payload 1`] = `Object {}`;
